Add slider and img

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     </head>
     <body>
         <h1>Hello World</h1>
+        <input type="range" min="0" max="100" step="5" value="">Useless slider xD</input>
+        <div>
+            <img src="square.png" alt="Yazi the cat" width="200">
+        </div>
     </body>
 </html>
