Add video link and table

--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <input type="range" min="0" max="100" step="5" value="">Useless slider xD</input>
-        <div>
-            <img src="square.png" alt="Yazi the cat" width="200">
-        </div>
+        <h1 style="background-color:rgb(103, 108, 168); color:rgb(21, 13, 63); font-family:monospace; text-align:center;">Hello World</h1>
+        <input type="range" min="0" max="100" step="5" value=""><p style="color:cornflowerblue;">Useless slider xD</p>
+        <br>
+        <br>
+        <img src="media/square.png" alt="Yazi the cat" width="200">
+        <br>
+        <a href="https://hoovcat.deviantart.com/" style="font-size:200%">See more here</a>
+        <br>
+        <table border="1" width="400">
+            <tr>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+            </tr>
+            <tr>
+                <th>4</th>
+                <th>5</th>
+                <th>6</th>
+            </tr>
+            <tr>
+                <th>7</th>
+                <th>8</th>
+                <th>9</th>
+            </tr>
+        </table>
     </body>
 </html>
