Add image links

--- a/tags.html
+++ b/tags.html
@@ -6,22 +6,26 @@
     </head>
     <body>
         <h1>Ryan Shappell</h1>
-        <h2>About Me</h2>
+        <h2>About Me:</h2>
         <p>I was born in Chyenne, Wyoming but I have lived in Japan for 4 years and Israel for 2 years.</p>
         <p>I now current attend the University of Washington in Electrical Engineering.</p>
-       <h3>My Favorite Sites</h3>
+       <h3>My Favorite Sites:</h3>
         <ol>
             <li><a href="https://www.twitch.tv/">Twitch</a></li>
             <li><a href="https://www.youtube.com/">Youtube</a></li>
             <li><a href="https://hoovcat.deviantart.com/">DeviantArt</a></li>
             <li><a href="https://www.spotify.com/us/">Spotify</a></li>
         </ol>
-        <h3>Decent Pictures ;)</h3>
+        <h3>Decent Pictures (by me):</h3>
         <ul>
-            <li><img src="https://pre00.deviantart.net/e60c/th/pre/i/2017/152/4/0/ascension_by_hoovcat-dbb7bbg.png" alt="Ascension" width="300"></li>
-            <li><img src="https://pre00.deviantart.net/66b3/th/pre/i/2017/182/f/0/mountain_by_hoovcat-dbep1i2.png" alt="Mountain" width="300"></li>
-            <li><img src="https://orig00.deviantart.net/3b8d/f/2017/173/f/5/capture_by_hoovcat-dbdo3ud.png" alt="Scottish Landscape" width="300"></li>
-            <li><img src="https://orig00.deviantart.net/63dc/f/2017/166/a/8/templar_by_hoovcat-dbcs6yl.gif" alt="Templar" width="300"></li>
+            <li>Ascension<a href="https://hoovcat.deviantart.com/art/Ascension-683944972"><br>
+                <img src="https://pre00.deviantart.net/e60c/th/pre/i/2017/152/4/0/ascension_by_hoovcat-dbb7bbg.png" alt="Ascension" title="Ascension" style="width:300px;"></a></li>
+            <li>Mountain<a href="https://hoovcat.deviantart.com/art/Mountain-689810906"><br>
+                <img src="https://pre00.deviantart.net/66b3/th/pre/i/2017/182/f/0/mountain_by_hoovcat-dbep1i2.png" alt="Mountain" title="Mountain" style="width:300px;"></a></li>
+            <li>Scottish Landscape<a href="https://hoovcat.deviantart.com/art/Scottish-Landscape-688087669"><br>
+                <img src="https://orig00.deviantart.net/3b8d/f/2017/173/f/5/capture_by_hoovcat-dbdo3ud.png" alt="Scottish Landscape" title="Scottish Landscape" style="width:300px;"></a></li>
+            <li>Templar Animation<a href="https://hoovcat.deviantart.com/art/Templar-686598717"><br>
+                <img src="https://orig00.deviantart.net/63dc/f/2017/166/a/8/templar_by_hoovcat-dbcs6yl.gif" alt="Templar" title="Templar Animation" style="width:300px;"></a></li>
         </ul>
     </body>
 </html>
