--- a/tags.html
+++ b/tags.html
@@ -4,28 +4,29 @@
     <head>
         <title>Ryan's Iffy Webside</title>
     </head>
-    <body>
-        <h1>Ryan Shappell</h1>
-        <h2>About Me:</h2>
+    <body style="background-color:rgb(209, 209, 209)">
+        <h1 style="background-color: rgb(33, 28, 77); color:rgb(228, 215, 190);">Ryan Shappell</h1>
+        <h2 style="background-color: rgb(33, 28, 77); color:rgb(228, 215, 190);">About Me:</h2>
         <p>I was born in Chyenne, Wyoming but I have lived in Japan for 4 years and Israel for 2 years.</p>
         <p>I now current attend the University of Washington in Electrical Engineering.</p>
-       <h3>My Favorite Sites:</h3>
+        <p>Find out more information at my personal website <a href="https://ryanshappell.github.io/">here</a>.</p>
+       <h3 style="background-color: rgb(33, 28, 77); color:rgb(228, 215, 190);">My Favorite Sites:</h3>
         <ol>
             <li><a href="https://www.twitch.tv/">Twitch</a></li>
             <li><a href="https://www.youtube.com/">Youtube</a></li>
             <li><a href="https://hoovcat.deviantart.com/">DeviantArt</a></li>
             <li><a href="https://www.spotify.com/us/">Spotify</a></li>
         </ol>
-        <h3>Decent Pictures (by me):</h3>
-        <ul>
+        <h3 style="background-color: rgb(33, 28, 77); color:rgb(228, 215, 190);">Decent Pictures (by me):</h3>
+        <ul style="font-family:monospace">
             <li>Ascension<a href="https://hoovcat.deviantart.com/art/Ascension-683944972"><br>
-                <img src="https://pre00.deviantart.net/e60c/th/pre/i/2017/152/4/0/ascension_by_hoovcat-dbb7bbg.png" alt="Ascension" title="Ascension" style="width:300px;"></a></li>
+                <img src="https://pre00.deviantart.net/e60c/th/pre/i/2017/152/4/0/ascension_by_hoovcat-dbb7bbg.png" alt="Ascension" title="Ascension" style="width:300px;border:dotted"></a></li>
             <li>Mountain<a href="https://hoovcat.deviantart.com/art/Mountain-689810906"><br>
-                <img src="https://pre00.deviantart.net/66b3/th/pre/i/2017/182/f/0/mountain_by_hoovcat-dbep1i2.png" alt="Mountain" title="Mountain" style="width:300px;"></a></li>
+                <img src="https://pre00.deviantart.net/66b3/th/pre/i/2017/182/f/0/mountain_by_hoovcat-dbep1i2.png" alt="Mountain" title="Mountain" style="width:300px;border:dotted"></a></li>
             <li>Scottish Landscape<a href="https://hoovcat.deviantart.com/art/Scottish-Landscape-688087669"><br>
-                <img src="https://orig00.deviantart.net/3b8d/f/2017/173/f/5/capture_by_hoovcat-dbdo3ud.png" alt="Scottish Landscape" title="Scottish Landscape" style="width:300px;"></a></li>
+                <img src="https://orig00.deviantart.net/3b8d/f/2017/173/f/5/capture_by_hoovcat-dbdo3ud.png" alt="Scottish Landscape" title="Scottish Landscape" style="width:300px;border:dotted"></a></li>
             <li>Templar Animation<a href="https://hoovcat.deviantart.com/art/Templar-686598717"><br>
-                <img src="https://orig00.deviantart.net/63dc/f/2017/166/a/8/templar_by_hoovcat-dbcs6yl.gif" alt="Templar" title="Templar Animation" style="width:300px;"></a></li>
+                <img src="https://orig00.deviantart.net/63dc/f/2017/166/a/8/templar_by_hoovcat-dbcs6yl.gif" alt="Templar" title="Templar Animation" style="width:300px;border:dotted"></a></li>
         </ul>
     </body>
 </html>
