--- a/introToCss.html
+++ b/introToCss.html
@@ -19,12 +19,12 @@
 				<li><a href="https://www.amazon.com">Amazon</a></li>
 				<li><a href="https://www.theonion.com">The Onion</a></li>
 			</ul>
-			<img src="icon.gif" width="350px" height="200px">
+			<img src="media/icon.gif" width="350px" height="200px">
 		</div>
 		
 		<div id = "Content">
 			<p> This is Keith Price's number one Fan Site! He is a good leader, wins games, throws awesome passes, hits his targets, can run when he needs to, and has a cheesy smile. Huskies have been on point this season with a starting record of 4-0. The Huskies smashed Boise State, pummeled Illinois, dominated Idaho State, and ran all over Arizona. <br /><br /> <span id="bow">Bow Down to Washington!!</span></p>
-			<img src="price.jpg">
+			<img src="media/price.jpg">
 		</div>
 		
 		<div id = "Footer">
