Add vid and audio

--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -6,5 +6,9 @@
     <body>
         <h3>Decent Song:</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lX44CAz-JhU?start=180&amp;autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <br>
+        <audio controls src="media/song.mp3">Another Decent Song:</audio>
+        <br>
+        <video controls src="media/video.mp4" width="560px"></video>
     </body>
 </html>
