--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -4,11 +4,15 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h3>Decent Song:</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/lX44CAz-JhU?start=180&amp;autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <br>
-        <audio controls src="media/song.mp3">Another Decent Song:</audio>
-        <br>
+        <h3>Decent Song (can't go fullscreen ;D):</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lX44CAz-JhU?start=180&amp;autoplay=1" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+        <p>Another Decent Song:</p>
+        <audio controls src="media/song.mp3"></audio>
+        <p>Short Video:</p>
         <video controls src="media/video.mp4" width="560px"></video>
+        <p>Embedded Website:</p>
+        <object data="https://hoovcat.deviantart.com/" type="media_type" width="560px" height="315px"></object>
+        <p>RSS Feed:</p>
+        <script type="text/javascript" src="http://output38.rssinclude.com/output?type=js&amp;id=1179916&amp;hash=0f24cb6de12156b7bd77f912df328bc2"></script>
     </body>
 </html>
