--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -13,6 +13,6 @@
         <p>Embedded Website:</p>
         <object data="https://hoovcat.deviantart.com/" type="media_type" width="560px" height="315px"></object>
         <p>RSS Feed:</p>
-        <script type="text/javascript" src="http://output38.rssinclude.com/output?type=js&amp;id=1179916&amp;hash=0f24cb6de12156b7bd77f912df328bc2"></script>
+        <iframe width="400" height="400" style="border:none;" src="http://output34.rssinclude.com/output?type=iframe&amp;id=1179916&amp;hash=cc5dc921cadb8ad040437d6b3980e7fd"></iframe>
     </body>
 </html>
