--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -13,6 +13,6 @@
         <p>Embedded Website:</p>
         <object data="https://hoovcat.deviantart.com/" type="media_type" width="560px" height="315px"></object>
         <p>RSS Feed:</p>
-        <iframe width="400" height="400" style="border:none;" src="http://output34.rssinclude.com/output?type=iframe&amp;id=1179916&amp;hash=cc5dc921cadb8ad040437d6b3980e7fd"></iframe>
+        <script width="560" height="315" src="http://rss.bloople.net/?url=http%3A%2F%2Frss.nytimes.com%2Fservices%2Fxml%2Frss%2Fnyt%2FHomePage.xml&showtitle=false&type=js"></script>
     </body>
 </html>
