--- a/someCss.html
+++ b/someCss.html
@@ -14,5 +14,9 @@
                 Simple living said the Prophet Mohammed “sets my heart on higher thoughts.” There is a need to follow simplicity in our life. In today’s world of increasing pomp and show, when everybody is joining the rat race of displaying his wealth, we should prefer to live simply, without any artificiality. Mahatma Gandhi’s life shows us that simplicity in life always encourages maturity of mind. Instead of wasting wealth in various socio-religious ceremonies, we should be decent and undemonstrative. People who are really good need not show that they are good. In the same manner, the sophistication of our life style needs no raw display of wealth, it would rather appear in our character or in the manner we carry ourselves. People, who work hard and are the best servants of humanity, live in a quiet frugal manner. We should consider it a sin to waste money when we are aware of the fact that millions of our compatriots are living below the poverty line. Nowadays, in increasing consumerist culture, where everything is on sale, we should adhere to the simple way of life if we want to preserve human attributes in us.
             </p>
         </div>
+        <div id = "Apprentice">
+                <img src="/media/square.png">
+                <p class="text-over-image">CENTER</p>  
+        </div>
     </body>
 </html>
