--- a/someCss.html
+++ b/someCss.html
@@ -5,18 +5,18 @@
     </head>
     <body>
         <div id = "P1">
-            <p><img src="/media/icon.gif">
+            <p><img class="small-img" src="/media/icon.gif">
                 The proverb has deep meaning, which is always useful for a successful life. It conveys the idea that we should always think and then act accordingly. Impulsive actions may lead us to embarrassing and odd situations. As we should always think before we speak, in the same way we should think before we act. Life is full of various factors, the factors which can fascinate us for the moment but may lead us to failure or the factors which can repel immediately but may be the stepping stones to success. For example, going to a movie or playing video games may seem an attractive thing for the time being but can, in the course of time not only disturb one’s studies but also injure our eyes. Therefore, we should always restrain our intuitive and impulsive desires and then act according to what our mind says is right. Even the great men like Gandhi. Nehru, John Kennedy have been prey to their passions and emotions due to which the nations suffered. We should learn from their lives and should always act thoughtfully.
             </p>
         </div>
         <div id = "P2">
-            <p><img src="/media/square.png">
+            <p><img class="small-img" src="/media/square.png">
                 Simple living said the Prophet Mohammed “sets my heart on higher thoughts.” There is a need to follow simplicity in our life. In today’s world of increasing pomp and show, when everybody is joining the rat race of displaying his wealth, we should prefer to live simply, without any artificiality. Mahatma Gandhi’s life shows us that simplicity in life always encourages maturity of mind. Instead of wasting wealth in various socio-religious ceremonies, we should be decent and undemonstrative. People who are really good need not show that they are good. In the same manner, the sophistication of our life style needs no raw display of wealth, it would rather appear in our character or in the manner we carry ourselves. People, who work hard and are the best servants of humanity, live in a quiet frugal manner. We should consider it a sin to waste money when we are aware of the fact that millions of our compatriots are living below the poverty line. Nowadays, in increasing consumerist culture, where everything is on sale, we should adhere to the simple way of life if we want to preserve human attributes in us.
             </p>
         </div>
         <div id = "Apprentice">
-                <img src="/media/square.png">
-                <p class="text-over-image">CENTER</p>  
+            <img src="/media/square.png">
+            <p class="text-over-image">CENTER</p>  
         </div>
     </body>
 </html>
