--- a/someCss.html
+++ b/someCss.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="anExternal.css">
     </head>
     <body>
+        <h3>CSS Experimentation</h3>
         <div id = "P1">
             <p><img class="small-img" src="/media/icon.gif">
                 The proverb has deep meaning, which is always useful for a successful life. It conveys the idea that we should always think and then act accordingly. Impulsive actions may lead us to embarrassing and odd situations. As we should always think before we speak, in the same way we should think before we act. Life is full of various factors, the factors which can fascinate us for the moment but may lead us to failure or the factors which can repel immediately but may be the stepping stones to success. For example, going to a movie or playing video games may seem an attractive thing for the time being but can, in the course of time not only disturb one’s studies but also injure our eyes. Therefore, we should always restrain our intuitive and impulsive desires and then act according to what our mind says is right. Even the great men like Gandhi. Nehru, John Kennedy have been prey to their passions and emotions due to which the nations suffered. We should learn from their lives and should always act thoughtfully.
